card img alignment fixed

--- a/css/custom.css
+++ b/css/custom.css
@@ -38,3 +38,13 @@ body{
 .navbar-brand h2, .navbar-brand h3{
     font-weight: bold;
 }
+
+.z-index{
+    z-index: 0;
+    position: relative;
+}
+
+.card img{
+    width: 200px;
+    height: 200px;
+}
